<resources>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue" />
    <string name="login_to_continue1">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register_account">Register Account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>
    <string name="travel_buddy">Travel Buddy</string>
    <string name="title_activity_google_maps">GoogleMapsActivity</string>

    <string name="app_name">Travel Buddy</string>
    <string name="app_title">Travel Buddy Tour Planner</string>
    <string name="enter_destination_hint">Enter destination in Malaysia</string>
    <string name="generate_button_text">Confirm</string>
    <string name="accommodation">Accommodation</string>
    <string name="restaurants">Restaurants</string>
    <string name="things_to_do">Things to Do</string>
    <string name="viewPager_description">View</string>
    <string name="view_more">View More</string>
    <string name="locationimage">locationImage</string>
    <string name="address">Address:</string>
    <string name="description">Description:</string>
    <string name="name2">Name:</string>
    <string name="price">Price:</string>
    <string name="area">Area</string>
    <string name="about">About</string>
    <string name="cuisine">Cuisine</string>
    <string name="cuisine_type">cuisine_type</string>
    <string name="type">Type</string>
    <string name="thingstype">thingstype</string>
    <string name="backbutton">backButton</string>
    <string name="addtoplan">addToPlan</string>
    <string name="plan_name">Plan Name</string>
    <string name="add_button">add_button</string>
    <string name="add_plan">Add Plan</string>
    <string name="plan_image">Plan Image</string>
    <string name="save">Save</string>
    <string name="return_to_my_plans">Return to My Plans</string>
    <string name="filter">filter</string>
    <string name="amenities">Amenities:</string>
    <string name="review">Review:</string>
    <string name="type_2">Type:</string>
    <string name="amenities_2">Amenities</string>
    <string name="settingsButton" />
    <string name="destination">Destination</string>
    <string name="location_symbol">location symbol</string>
    <string name="find_local_tourist_guide">Find Local/Tourist Guide</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="change_image">Change Image</string>
    <string name="add_location">Add Location</string>
    <string name="add_language">Add Language</string>
    <string name="save_changes">Save Changes</string>
    <string name="settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="return_to_home">Return to Home</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_language">Enter Language</string>
    <string name="new_password">New Password</string>
    <string name="select_language">Select_Language</string>
    <string name="image_url">Image URL</string>
    <string name="address_2">Address</string>
    <string name="description_2">Description</string>
    <string name="update">Update</string>
    <string name="edit_plan_name">Edit Plan Name</string>
</resources>