<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="330dp"
        android:src="@drawable/placeholder_image"
        android:contentDescription="@string/locationimage"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Back Button -->
    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/backbutton"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:elevation="4dp"/>

    <!-- Save to Favorites Button -->
    <ImageButton
        android:id="@+id/saveToFavoritesButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_bookmark"
        android:contentDescription="@string/addtoplan"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:elevation="4dp"/>

    <!-- ScrollView wrapping the LinearLayout -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Name -->
            <TextView
                android:id="@+id/textViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name2"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <!-- Description -->
            <TextView
                android:id="@+id/textViewDescriptionLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="16sp"
                android:textColor="@color/gray"
                android:layout_marginTop="16dp"/>

            <!-- Address -->
            <TextView
                android:id="@+id/textViewAddressLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/area"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/textViewAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="16sp"
                android:textColor="@color/gray"
                android:layout_marginTop="8dp"/>

            <!-- Type -->
            <TextView
                android:id="@+id/textViewTypeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/textViewType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thingstype"
                android:textSize="16sp"
                android:textColor="@color/gray"
                android:layout_marginTop="8dp"/>

            <!-- Price -->
            <TextView
                android:id="@+id/textViewPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="18sp"
                android:textColor="@color/green"
                android:layout_marginTop="14sp"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

