<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:padding="16dp">

    <!-- Back Button -->
    <ImageView
        android:id="@+id/imageBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/backbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Name EditText -->
    <EditText
        android:id="@+id/editTextName"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:hint="@string/name"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/imageBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Description EditText -->
    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:hint="@string/description_2"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/editTextName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Address EditText -->
    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:hint="@string/address_2"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/editTextDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Image URL EditText -->
    <EditText
        android:id="@+id/editTextImageUrl"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:hint="@string/image_url"
        android:inputType="textUri"
        app:layout_constraintTop_toBottomOf="@id/editTextAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Amenities EditText -->
    <EditText
        android:id="@+id/editTextAmenities"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/amenities_2"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/editTextImageUrl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone" /> <!-- Only visible for accommodations -->

    <!-- Cuisine EditText -->
    <EditText
        android:id="@+id/editTextCuisine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/cuisine_type"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/editTextImageUrl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone" /> <!-- Only visible for restaurants -->

    <!-- Review EditText -->
    <EditText
        android:id="@+id/editTextReview"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:hint="@string/review"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/editTextAmenities"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Price EditText -->
    <EditText
        android:id="@+id/editTextPrice"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/editTextReview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Type Spinner -->
    <Spinner
        android:id="@+id/spinnerType"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/editTextPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Update Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/purple"
        android:paddingHorizontal="32dp"
        android:paddingVertical="12dp"
        android:text="@string/update"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerType" />

</androidx.constraintlayout.widget.ConstraintLayout>
