<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder_image" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/buttonDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_more"
        android:background="@color/purple"
        android:textColor="@color/gold"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:background="@color/dark_red"
        android:textColor="@color/red"
        android:layout_marginTop="8dp"/>
</LinearLayout>
