<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <!-- Back Button -->
    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/return_to_my_plans"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/destinationEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/enter_destination_hint"
        android:inputType="text"
        android:backgroundTint="@color/purple"
        android:textColor="@color/black"
        android:layout_below="@id/backButton"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="address"/>

    <Button
        android:id="@+id/generateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate_button_text"
        android:textColor="@color/black"
        android:layout_below="@id/destinationEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"/>

    <!-- Add the resultTextView here -->
    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/black"
        android:layout_below="@id/generateButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"/>

</RelativeLayout>












