<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <!-- Declare your variables here if needed -->
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <!-- Back Button -->
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/backbutton"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"/>

        <EditText
            android:id="@+id/inputPlanName"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:hint="@string/plan_name"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/backButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"/>

        <Button
            android:id="@+id/buttonAddPlan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_plan"
            app:layout_constraintTop_toBottomOf="@id/inputPlanName"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>


